feat(DCOS-15151): Add Mesos details to overview page
This PR adds Mesos details to overview page.

--- a/src/js/translations/en-US.json
+++ b/src/js/translations/en-US.json
@@ -8,5 +8,15 @@
   "DASHBOARD.PANEL_HEADING.COMPONENT_HEALTH": "Component Health",
   "DASHBOARD.PANEL_HEADING.NODES": "Nodes",
 
-  "SERVICE_ACTIONS.OPEN_SERVICE": "Open Service"
+  "SERVICE_ACTIONS.OPEN_SERVICE": "Open Service",
+
+  "COMMON.GENERAL": "General",
+  "COMMON.DETAILS": "Details",
+  "COMMON.CLUSTER": "Cluster",
+  "COMMON.LEADER": "Leader",
+  "COMMON.VERSION": "Version",
+  "COMMON.BUILT": "Built",
+  "COMMON.STARTED": "Started",
+  "COMMON.ELECTED": "Elected",
+  "COMMON.BY_NAME": "by {name}"
 }
